@@ -329,4 +329,7 @@
 	  discussed at http://www.drdobbs.com/web-development/\
 	  an-embeddable-lightweight-xml-rpc-server/184405364.  Contributed by
 	  Max Holtzberg.
+	* apps/netutils/uip_listenon.c:  Logic in uip_server.c that creates
+	  the listening socket was moved to this new file to support re-use.
+	  Contributed by Kate.
 
